--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "highlight": "^0.2.4",
     "next": "latest",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
