--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "1.0.6",
+    "@supabase/auth-helpers-nextjs": "^0.5.6",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-ui-react": "^0.3.4",
+    "@supabase/auth-ui-shared": "^0.1.3",
+    "@supabase/supabase-js": "^2.10.0",
     "highlight": "^0.2.4",
     "next": "latest",
     "openai": "^3.2.1",
