--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/auth-ui-react": "^0.3.4",
     "@supabase/auth-ui-shared": "^0.1.3",
     "@supabase/supabase-js": "^2.10.0",
+    "axios": "^1.3.4",
     "highlight": "^0.2.4",
     "next": "latest",
     "openai": "^3.2.1",
