--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-player": "^2.12.0",
     "react-typed": "^1.2.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
